# GSE-prototype

./: .gitignore  CLAUDE.md  Cargo test error.md  Cargo.toml  MEMO  PROMPT1.MD  Prompt.md  QUICKSTART.md  README.ja.md  README.md  README_ja.md  TSF_Implementation.md
.github/workflows/: ci.yml
src/: App.css  App.tsx  error.rs  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  sensors.rs
src-tauri/src/analysis/: engine.rs  features.rs
src-tauri/src/input/: hook.rs  ime.rs
src/components/: Dashboard.tsx
src/inference/: hmm.rs  mod.rs  rules.rs
src/input/: keyboard.rs
src/ui/: overlay.rs
tests/: integration_tests.rs
